test refactoring variables introduced to tests, now our tests are actually can pass the introduction to programming languages course